--- a/C0_Que_Es_Una_RNC.ipynb
+++ b/C0_Que_Es_Una_RNC.ipynb
@@ -82,9 +82,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Operación Max Pooling\n",
+    "\n",
+    "Está operación busca hacer que la red neuronal sea capaz de detectar las imagenes en diferentes posiciones, tamaños, enfoques, cantidad de luz. "
+   ]
   },
   {
    "cell_type": "markdown",
