Se dejo especificada la etapa de full connection, pero falta eexplicar de manera mas detallada. Se agregara una explicación de la función softmax

--- a/C0_Que_Es_Una_RNC.ipynb
+++ b/C0_Que_Es_Una_RNC.ipynb
@@ -82,34 +82,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Operación Max Pooling\n",
     "\n",
-    "Está operación busca hacer que la red neuronal sea capaz de detectar las imagenes en diferentes posiciones, tamaños, enfoques, cantidad de luz. "
+    "Está operación busca hacer que la red neuronal sea capaz de detectar las imagenes en diferentes posiciones, tamaños, enfoques, cantidad de luz. \n",
+    "\n",
+    "El otro uso que tenemos para está operación es reducir la cantidad de información que se crea mediante las convoluciones. A pesar que un solo kernel reduce la información de la imagen original. Si aplicamos muchos kernel obtendremos muchas capas de caracteristicas que en un punto terminaran por superar la cantidad de pixeles originales. \n",
+    "\n",
+    "El max pooling consiste en aplicar un filtro de maximos a cada mapa de caracteristicas, de tal forma que se eliminen los rasgos menos relevantes y a su vez minimicemos el tamaño del mapá de caracteristicas. De está manera liberamos costó de computo a la máquina en el momento de entrenar el modelo. \n",
+    "\n",
+    "![Max Pooling](img/max_pooling.png \"Max Pooling\")\n",
+    "\n",
+    "El tamaño de este filtro puede ser variable de acuerdo a nuestras necesidades, al igual que el kernel generalmente estos filtros requieren usar tamaños impares. \n",
+    "\n",
+    "Ademas del maximo tambien se puede aplicar otras técnicas como el promedio o el minimo de los datos.\n",
+    "\n",
+    "Una herramienta que puede servir como método visual para enteder el proceso de RNC, esta en el siguiente ling:\n",
+    "\n",
+    "https://www.cs.ryerson.ca/~aharley/vis/conv/flat.html\n",
+    "\n",
+    "Con esta herramienta podremos escribir un número y nos presentara la respuesta de la RNC y a su vez nos muestra los resultados de cada convolución que ha sido aplicada en el módelo y los resutados por pixel. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Flattening\n",
+    "\n",
+    "Este proceso consiste en pasar de una matriz 2d a convertir en vectores columna cada una de las salidas que se obtuvieron del ultimo pasa hasta ahora descrito (max pooling). Este paso se aplicara a cada uno de los mapas de caracteristicas que hemos encontrado, generando vectores columna, uno \"sobre\" otro para pasarlos como fuentes de alimentación de nuestra red neuronal. \n",
+    "\n",
+    "Este paso es necesario pues nuestras capas son arreglos de vectores columnas que contienen neuronas, en forma matricial no seria posible analizar esta información. \n",
+    "\n",
+    "\n",
+    "![Flattening](img/Flattening.png \"Flattening\")\n",
+    "\n",
+    "Cada una de las celdas de este vector sera una entrada de la capa de entrada de la red neuronal. "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Full Connection\n",
+    "\n",
+    "Sistema de votos\n",
+    "SOftmax para que el total de votos sumen 1\n",
+    "La etiqueta con mayor porcentaje de probabilidad se selecciona como la salida\n",
+    "Como es un sistema de votación cada neurona se especializa en encontrar un rasgo particular y su voto hace referencia a que tan segura en porcentaje esta segura que la caracteristica hace parte de la imágen para poder catalogarla como una u otra etiqueta\n",
+    "Este sistema de votos es el que se va ajustando al hacer pasar varias veces diferentes imágenes para su clasificación. "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "GitHUb con conceptos basicos para entender redes neuronales. \n",
+    "\n",
+    "https://adeshpande3.github.io/The-9-Deep-Learning-Papers-You-Need-To-Know-About.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
