--- a/C1_PerrosGatos.ipynb
+++ b/C1_PerrosGatos.ipynb
@@ -93,7 +93,7 @@
     "- **data_format:** Especifica el tamaño de las imagenes, es importante especificarlo en los casos donde la imágen no es cuadrada o tenemos mas de un canal de color. \n",
     "- **input_shape:** Se recomienda tener tamaños de imagenes pequeñas y con dimensiones multiplos de potencias de dos. En ocaciones tambien podemos definier el tamaño del lote o batch, no siemprre es necesario hacerlo en este punto. Por ejemplo una entrada con un batch=4, imagen de 28x28 y tres canales de color:  **input_shape = (4, 28, 28, 3)** si no queremos usar el batch tendriamos **input_shape = (28, 28, 3)**.\n",
     "\n",
-    "**NOTA** En tensor flow se estipula primero el tamaño de los canales y despues el tamaño.\n",
+    "**NOTA** En tensor flow se estipula primero el tamaño de los canales y despues el tamaño de la matriz de imagen.\n",
     "\n",
     "-**activation:** Usaremos como activación una función de rectificación unitaria RELU. "
    ]
